style: add basic style settings, variables for colors & typography settings

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,2 +1,7 @@
 $font-heading: 'Fraunces', serif;
 $font-body: 'Barlow', sans-serif;
+$color-cream: #fefcf7;
+$color-cyan: #0e8784;
+$color-grey: #83888f;
+$color-grey-dark: #333d4b;
+$color-orange: #fdd6ba;
