feat: add markup & styles for btn component

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,7 +1,9 @@
 $font-heading: 'Fraunces', serif;
 $font-body: 'Barlow', sans-serif;
 $color-cream: #fefcf7;
-$color-cyan: #0e8784;
+$color-cyan-dark: #0e8784;
+$color-cyan-light: #66d2cf;
+$color-disabled: #e2dedb;
 $color-grey: #83888f;
 $color-grey-dark: #333d4b;
 $color-orange: #fdd6ba;
