style: add styles for header layout component

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -11,6 +11,10 @@ html {
 
 body {
   box-sizing: border-box;
+  background-color: $color-cream;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 a {
