--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,11 @@ html {
   scroll-behavior: smooth; }
 
 body {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  background-color: #fefcf7;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
 
 a {
   text-decoration: none; }
@@ -79,3 +83,20 @@ a {
     background-color: #e2dedb; }
     .btn--disabled:hover {
       background-color: #e2dedb; }
+
+.header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3.025% 5.56%; }
+  .header__nav-menu {
+    list-style: none;
+    width: 28.3rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+  .header__nav-link {
+    transition: all 0.3s; }
+    .header__nav-link:hover {
+      color: #333d4b; }
