--- a/css/style.css
+++ b/css/style.css
@@ -86,10 +86,11 @@ a {
 
 .header {
   width: 100%;
+  max-width: 128rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 3.025% 5.56%; }
+  padding: 3.025% 0; }
   .header__nav-menu {
     list-style: none;
     width: 28.3rem;
@@ -100,3 +101,30 @@ a {
     transition: all 0.3s; }
     .header__nav-link:hover {
       color: #333d4b; }
+
+.main {
+  width: 100%;
+  max-width: 128rem; }
+
+.hero {
+  height: 60rem;
+  width: 100%;
+  background: url("/assets/home/desktop/image-hero-coffeepress.jpg"), lightgray 0px 0px/100% 100% no-repeat;
+  background-size: cover;
+  border-radius: 10px;
+  overflow: hidden;
+  padding-left: 6.72%;
+  display: flex;
+  align-items: center; }
+  .hero__text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: start; }
+  .hero__heading {
+    color: #fefcf7;
+    width: 49.3rem; }
+  .hero__subheading {
+    color: #fefcf7;
+    opacity: 0.8;
+    width: 44.5rem;
+    margin: 3.2rem 0 5.6rem; }
