--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,9 @@
 @import "abstracts/variables";
+@import "abstracts/utilities";
 @import "base/base";
 @import "base/typography";
 @import "components/btn";
+@import "components/card";
 @import "layout/header";
 @import "layout/main";
 @import "layout/hero";
