--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import "base/typography";
 @import "components/btn";
 @import "components/card";
+@import "layout/collection";
 @import "layout/header";
 @import "layout/main";
 @import "layout/hero";
