feat: add markup for section.features in index.html

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import "components/btn";
 @import "components/card";
 @import "layout/collection";
+@import "layout/features";
 @import "layout/header";
 @import "layout/main";
 @import "layout/hero";
