--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,8 @@ a {
   width: 25.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: space-between; }
+  justify-content: space-between;
+  align-items: center; }
   .card__img {
     width: 100%; }
   .card__heading {
@@ -122,6 +123,40 @@ a {
     top: -5.5rem; }
   .collection__card {
     width: 22.97%; }
+
+.features {
+  height: 72.8rem;
+  width: 100%; }
+  .features__blackboard {
+    height: 57.7rem;
+    width: 100%;
+    background-color: #2c343e;
+    border-radius: 1rem;
+    padding: 10.2rem 6.64% 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  .features__heading, .features__card-heading, .features__card-subheading {
+    color: #fefcf7; }
+  .features__subheading {
+    color: #fefcf7;
+    opacity: 0.8;
+    width: 54rem;
+    margin: 3.2rem 0 8.6rem; }
+  .features__list {
+    width: 100%;
+    display: flex;
+    justify-content: space-between; }
+  .features__card {
+    width: 31.53%;
+    height: 38.2rem;
+    border-radius: 0.8rem;
+    padding: 7.2rem 4.28% 4.8rem;
+    background-color: #0e8784; }
+  .features__card:nth-child(3) {
+    padding-top: 8.3rem; }
+  .features__img {
+    width: 7.2rem; }
 
 .header {
   width: 100%;
