--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,4 +1,50 @@
 .features {
   height: 72.8rem;
   width: 100%;
+
+  &__blackboard {
+    height: 57.7rem;
+    width: 100%;
+    background-color: #2c343e;
+    border-radius: 1rem;
+    padding: 10.2rem 6.64% 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__heading,
+  &__card-heading,
+  &__card-subheading {
+    color: $color-cream;
+  }
+
+  &__subheading {
+    color: $color-cream;
+    opacity: 0.8;
+    width: 54rem;
+    margin: 3.2rem 0 8.6rem;
+  }
+
+  &__list {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__card {
+    width: 31.53%;
+    height: 38.2rem;
+    border-radius: 0.8rem;
+    padding: 7.2rem 4.28% 4.8rem;
+    background-color: $color-cyan-dark;
+  }
+
+  &__card:nth-child(3) {
+    padding-top: 8.3rem;
+  }
+
+  &__img {
+    width: 7.2rem;
+  }
 }
