--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,5 +7,6 @@
 @import "layout/collection";
 @import "layout/features";
 @import "layout/header";
-@import "layout/main";
 @import "layout/hero";
+@import "layout/main";
+@import "layout/workflow";
