style: add styles for footer

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 3.025% 0;
+  padding: 4.35rem 0;
 
   &__nav-menu {
     list-style: none;
