--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import "components/card";
 @import "layout/collection";
 @import "layout/features";
+@import "layout/footer";
 @import "layout/header";
 @import "layout/hero";
 @import "layout/main";
