--- a/css/style.css
+++ b/css/style.css
@@ -158,13 +158,45 @@ a {
   .features__img {
     width: 7.2rem; }
 
+.footer {
+  width: 100%;
+  max-width: 128rem;
+  padding: 4.7rem 5.75%;
+  display: flex;
+  align-items: center;
+  background-color: #2c343e; }
+  .footer__logo {
+    margin-right: 9.6%; }
+  .footer__nav {
+    margin-right: auto; }
+  .footer__nav-menu {
+    list-style: none;
+    width: 28.3rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+  .footer__nav-link {
+    transition: all 0.3s; }
+    .footer__nav-link:hover {
+      color: #fefcf7; }
+  .footer__media-links {
+    width: 12rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+  .footer__sm-link {
+    cursor: pointer;
+    transition: all 0.3s; }
+    .footer__sm-link:hover {
+      filter: brightness(0) saturate(100%) invert(81%) sepia(5%) saturate(992%) hue-rotate(323deg) brightness(128%) contrast(99%); }
+
 .header {
   width: 100%;
   max-width: 128rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 3.025% 0; }
+  padding: 4.35rem 0; }
   .header__nav-menu {
     list-style: none;
     width: 28.3rem;
