--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -11,6 +11,7 @@ html {
 
 body {
   box-sizing: border-box;
+  padding-bottom: 8.8rem;
   background-color: $color-cream;
   display: flex;
   flex-direction: column;
