--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,10 +4,6 @@
 @import "base/typography";
 @import "components/btn";
 @import "components/card";
-@import "layout/collection";
-@import "layout/features";
 @import "layout/footer";
 @import "layout/header";
-@import "layout/hero";
-@import "layout/main";
-@import "layout/workflow";
+@import "pages/home";
