feat: add styles for section.hero-about in about-us.html

--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,31 @@ a {
     .header__nav-link:hover {
       color: #333d4b; }
 
+.main-about {
+  width: 100%;
+  max-width: 128rem; }
+
+.hero-about {
+  height: 45rem;
+  width: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+  padding-left: 6.72%;
+  background: url("/assets/about/desktop/image-hero-whitecup.jpg"), lightgray 0px 0px/100% 100% no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center; }
+  .hero-about__text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: start; }
+  .hero-about__heading {
+    color: #fefcf7; }
+  .hero-about__subheading {
+    width: 44.5rem;
+    margin-top: 2.4rem;
+    color: #fefcf7; }
+
 .main-home {
   width: 100%;
   max-width: 128rem; }
@@ -161,7 +186,6 @@ a {
   background: url("/assets/home/desktop/image-hero-coffeepress.jpg"), lightgray 0px 0px/100% 100% no-repeat;
   background-size: cover;
   border-radius: 10px;
-  overflow: hidden;
   padding-left: 6.72%;
   display: flex;
   align-items: center; }
