--- a/sass/pages/_about-us.scss
+++ b/sass/pages/_about-us.scss
@@ -2,3 +2,31 @@
   width: 100%;
   max-width: 128rem;
 }
+
+.hero-about {
+  height: 45rem;
+  width: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+  padding-left: 6.72%;
+  background: url("/assets/about/desktop/image-hero-whitecup.jpg"), lightgray 0px 0px / 100% 100% no-repeat;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+
+  &__text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+  }
+
+  &__heading {
+    color: $color-cream;
+  }
+
+  &__subheading {
+    width: 44.5rem;
+    margin-top: 2.4rem;
+    color: $color-cream;
+  }
+}
