--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,24 @@ a {
     margin-top: 2.4rem;
     color: #fefcf7; }
 
+.commitment {
+  height: 93.2rem;
+  width: 100%;
+  padding: 16.8rem 8.5rem 24.4rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .commitment__text-container {
+    width: 54rem;
+    display: flex;
+    flex-direction: column;
+    align-items: start; }
+  .commitment__heading {
+    margin-bottom: 3.2rem; }
+  .commitment__description {
+    opacity: 0.8;
+    width: 100%; }
+
 .main-home {
   width: 100%;
   max-width: 128rem; }
