--- a/sass/pages/_about-us.scss
+++ b/sass/pages/_about-us.scss
@@ -30,3 +30,28 @@
     color: $color-cream;
   }
 }
+
+.commitment {
+  height: 93.2rem;
+  width: 100%;
+  padding: 16.8rem 8.5rem 24.4rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  &__text-container {
+    width: 54rem;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+  }
+
+  &__heading {
+    margin-bottom: 3.2rem;
+  }
+
+  &__description {
+    opacity: 0.8;
+    width: 100%;
+  }
+}
