--- a/sass/pages/_about-us.scss
+++ b/sass/pages/_about-us.scss
@@ -9,7 +9,8 @@
   border-radius: 10px;
   overflow: hidden;
   padding-left: 6.72%;
-  background: url("/assets/about/desktop/image-hero-whitecup.jpg"), lightgray 0px 0px / 100% 100% no-repeat;
+  background: url("/assets/about/desktop/image-hero-whitecup.jpg"),
+    lightgray 0px 0px / 100% 100% no-repeat;
   background-size: cover;
   display: flex;
   align-items: center;
@@ -53,5 +54,37 @@
   &__description {
     opacity: 0.8;
     width: 100%;
+  }
+}
+
+.quality {
+  height: 47.4rem;
+  width: 100%;
+  padding: 10rem 8.5rem 10rem;
+  background: url("/assets/about/desktop/bg-quality.png"),
+    lightgray 0px 0px / 100% 100% no-repeat;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+
+  &__text-container {
+    width: 54rem;
+  }
+
+  &__heading {
+    margin-bottom: 3.2rem;
+    color: $color-cream;
+  }
+
+  &__description {
+    color: $color-cream;
+    opacity: 0.8;
+    width: 100%;
+  }
+
+  &__image {
+    position: relative;
+    top: -17.4rem;
   }
 }
