--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,27 @@ a {
     position: relative;
     top: -17.4rem; }
 
+.contacts {
+  padding: 16.8rem 11.72% 16.8rem 6.64%; }
+  .contacts__heading {
+    color: #83888f;
+    margin-bottom: 7.2rem; }
+  .contacts__headquarters {
+    width: 100%;
+    display: flex;
+    justify-content: space-between; }
+  .contacts__location {
+    height: 26.2rem;
+    width: 28.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: start; }
+  .contacts__location-country {
+    margin-bottom: 2.4rem; }
+  .contacts__location-phone:hover {
+    text-decoration: underline; }
+
 .main-home {
   width: 100%;
   max-width: 128rem; }
