--- a/sass/pages/_about-us.scss
+++ b/sass/pages/_about-us.scss
@@ -88,3 +88,37 @@
     top: -17.4rem;
   }
 }
+
+.contacts {
+  padding: 16.8rem 11.72% 16.8rem 6.64%;
+
+  &__heading {
+    color: $color-grey;
+    margin-bottom: 7.2rem;
+  }
+
+  &__headquarters {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__location {
+    height: 26.2rem;
+    width: 28.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: start;
+  }
+
+  &__location-country {
+    margin-bottom: 2.4rem;
+  }
+
+  &__location-phone {
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
