style: add styles for section.hero-plan in create-plan.html

--- a/css/style.css
+++ b/css/style.css
@@ -237,6 +237,30 @@ a {
   .contacts__location-phone:hover {
     text-decoration: underline; }
 
+.main-plan {
+  width: 100%;
+  max-width: 128rem; }
+
+.hero-plan {
+  height: 45rem;
+  width: 100%;
+  background: url("/assets/plan/desktop/image-hero-blackcup.jpg"), lightgray 0px 0px/100% 100% no-repeat;
+  background-size: cover;
+  padding-left: 6.72%;
+  display: flex;
+  align-items: center; }
+  .hero-plan__text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: start; }
+  .hero-plan__heading {
+    color: #fefcf7; }
+  .hero-plan__subheading {
+    width: 44.5rem;
+    margin-top: 3.2rem;
+    color: #fefcf7;
+    opacity: 0.8; }
+
 .main-home {
   width: 100%;
   max-width: 128rem; }
