--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ a {
   display: inline-block;
   background-color: #0e8784;
   padding: 1.55rem 3.1rem;
+  border: none;
   border-radius: 0.6rem;
   font-family: "Fraunces", serif;
   color: #fefcf7;
@@ -84,10 +85,14 @@ a {
   transition: all 0.3s; }
   .btn:hover {
     background-color: #66d2cf; }
-  .btn--disabled {
+
+.btn-submit {
+  padding: 1.55rem 3.55rem; }
+
+.btn-disabled {
+  background-color: #e2dedb; }
+  .btn-disabled:hover {
     background-color: #e2dedb; }
-    .btn--disabled:hover {
-      background-color: #e2dedb; }
 
 .card {
   width: 25.5rem;
@@ -261,6 +266,9 @@ a {
     color: #fefcf7;
     opacity: 0.8; }
 
+.create-plan__form {
+  max-width: 73rem; }
+
 .create-plan__fieldset {
   border: none;
   margin-bottom: 8.8rem; }
@@ -333,6 +341,31 @@ a {
 
 .create-plan__option-desc {
   display: block; }
+
+.create-plan__summary {
+  width: 100%;
+  background-color: #2c343e;
+  border-radius: 1rem;
+  padding: 4.7rem 8.77%;
+  margin-bottom: 4rem; }
+
+.create-plan__summary-heading {
+  color: #fff;
+  opacity: 0.5037;
+  text-transform: uppercase;
+  margin-bottom: 0.8rem; }
+
+.create-plan__summary-text {
+  color: #fff;
+  line-height: 4rem; }
+
+.create-plan__summary-option {
+  color: #0e8784; }
+
+.create-plan__submit {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end; }
 
 .main-home {
   width: 100%;
