--- a/sass/pages/_create-plan.scss
+++ b/sass/pages/_create-plan.scss
@@ -32,6 +32,10 @@
 }
 
 .create-plan {
+  &__form {
+    max-width: 73rem;
+  }
+
   &__fieldset {
     border: none;
     margin-bottom: 8.8rem;
@@ -127,5 +131,35 @@
 
   &__option-desc {
     display: block;
+  }
+
+  &__summary {
+    width: 100%;
+    background-color: #2c343e;
+    border-radius: 1rem;
+    padding: 4.7rem 8.77%;
+    margin-bottom: 4rem;
+  }
+
+  &__summary-heading {
+    color: $color-white;
+    opacity: 0.5037;
+    text-transform: uppercase;
+    margin-bottom: 0.8rem;
+  }
+
+  &__summary-text {
+    color: $color-white;
+    line-height: 4rem;
+  }
+
+  &__summary-option {
+    color: $color-cyan-dark;
+  }
+
+  &__submit {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
   }
 }
