--- a/sass/pages/_create-plan.scss
+++ b/sass/pages/_create-plan.scss
@@ -31,10 +31,23 @@
   }
 }
 
+.workflow-plan {
+  height: 65.3rem;
+  background-color: #2c343e;
+  padding: 11.5rem 11.72% 10rem 6.64% !important;
+  margin-top: 16.8rem;
+
+  &__step-name,
+  &__step-desc {
+    color: $color-cream;
+  }
+}
+
 .create-plan {
   display: flex;
   justify-content: space-between;
   align-items: start;
+  padding: 16.8rem 0;
 
   &__flow {
     width: 20%;
