--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center; }
+  @media only screen and (max-width: 900px) {
+    body {
+      padding-bottom: 7.2rem; } }
 
 a {
   text-decoration: none; }
@@ -112,16 +115,48 @@ a {
   display: flex;
   align-items: center;
   background-color: #2c343e; }
+  @media only screen and (max-width: 1320px) {
+    .footer {
+      width: 93.75%;
+      max-width: none; } }
+  @media only screen and (max-width: 900px) {
+    .footer {
+      flex-direction: column;
+      justify-content: center;
+      padding: 5.4rem 0; } }
+  @media only screen and (max-width: 650px) {
+    .footer {
+      width: 92%; } }
   .footer__logo {
     margin-right: 9.6%; }
+    @media only screen and (max-width: 900px) {
+      .footer__logo {
+        margin-right: 0;
+        margin-bottom: 3.2rem; } }
+    @media only screen and (max-width: 650px) {
+      .footer__logo {
+        height: 2.4rem;
+        margin-bottom: 4.85rem; } }
   .footer__nav {
     margin-right: auto; }
+    @media only screen and (max-width: 900px) {
+      .footer__nav {
+        margin-right: 0;
+        margin-bottom: 6.5rem; } }
+    @media only screen and (max-width: 650px) {
+      .footer__nav {
+        margin-bottom: 4.85rem; } }
   .footer__nav-menu {
     list-style: none;
     width: 28.3rem;
     display: flex;
     justify-content: space-between;
     align-items: center; }
+    @media only screen and (max-width: 650px) {
+      .footer__nav-menu {
+        width: auto;
+        flex-direction: column;
+        gap: 2.4rem; } }
   .footer__nav-link {
     transition: all 0.3s; }
     .footer__nav-link:hover {
@@ -147,12 +182,13 @@ a {
   padding: 4.35rem 0; }
   @media only screen and (max-width: 1320px) {
     .header {
+      width: 93.75%;
       max-width: none;
-      padding: 4rem 3.125%; } }
+      padding: 4rem 0; } }
   @media only screen and (max-width: 650px) {
     .header {
-      max-width: none;
-      padding: 3.2rem 4%; } }
+      width: 92%;
+      padding: 3.2rem 0; } }
   .header__nav-menu {
     list-style: none;
     width: 28.3rem;
