--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -16,6 +16,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @media only screen and (max-width: 900px) {
+    padding-bottom: 7.2rem;
+  }
 }
 
 a {
