--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -6,12 +6,46 @@
   align-items: center;
   background-color: #2c343e;
 
+  @media only screen and (max-width: 1320px) {
+    width: 93.75%;
+    max-width: none;
+  }
+
+  @media only screen and (max-width: 900px) {
+    flex-direction: column;
+    justify-content: center;
+    padding: 5.4rem 0;
+  }
+
+  @media only screen and (max-width: 650px) {
+    width: 92%;
+  }
+
   &__logo {
     margin-right: 9.6%;
+
+    @media only screen and (max-width: 900px) {
+      margin-right: 0;
+      margin-bottom: 3.2rem;
+    }
+
+    @media only screen and (max-width: 650px) {
+      height: 2.4rem;
+      margin-bottom: 4.85rem;
+    }
   }
 
   &__nav {
     margin-right: auto;
+
+    @media only screen and (max-width: 900px) {
+      margin-right: 0;
+      margin-bottom: 6.5rem;
+    }
+
+    @media only screen and (max-width: 650px) {
+      margin-bottom: 4.85rem;
+    }
   }
 
   &__nav-menu {
@@ -20,6 +54,12 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @media only screen and (max-width: 650px) {
+      width: auto;
+      flex-direction: column;
+      gap: 2.4rem;
+    }
   }
 
   &__nav-link {
@@ -43,8 +83,8 @@
 
     &:hover {
       transform: translateY(-2px) scale(1.15);
-      filter: brightness(0) saturate(100%) invert(94%) sepia(9%) saturate(1519%) hue-rotate(311deg) brightness(108%) contrast(104%);
-      // filter: brightness(0) saturate(100%) invert(94%) sepia(16%) saturate(5685%) hue-rotate(311deg) brightness(95%) contrast(74%);
+      filter: brightness(0) saturate(100%) invert(94%) sepia(9%) saturate(1519%)
+        hue-rotate(311deg) brightness(108%) contrast(104%);
     }
   }
 }
