--- a/css/style.css
+++ b/css/style.css
@@ -115,35 +115,38 @@ a {
   display: flex;
   align-items: center;
   background-color: #2c343e; }
-  @media only screen and (max-width: 1320px) {
+  @media only screen and (max-width: 1440px) {
     .footer {
-      width: 93.75%;
+      width: 88.89%;
       max-width: none; } }
-  @media only screen and (max-width: 900px) {
+  @media only screen and (max-width: 1000px) {
     .footer {
       flex-direction: column;
       justify-content: center;
       padding: 5.4rem 0; } }
-  @media only screen and (max-width: 650px) {
+  @media only screen and (max-width: 768px) {
     .footer {
-      width: 92%; } }
+      width: 89.58%; } }
+  @media only screen and (max-width: 550px) {
+    .footer {
+      width: 87.2%; } }
   .footer__logo {
     margin-right: 9.6%; }
-    @media only screen and (max-width: 900px) {
+    @media only screen and (max-width: 1000px) {
       .footer__logo {
         margin-right: 0;
         margin-bottom: 3.2rem; } }
-    @media only screen and (max-width: 650px) {
+    @media only screen and (max-width: 550px) {
       .footer__logo {
         height: 2.4rem;
         margin-bottom: 4.85rem; } }
   .footer__nav {
     margin-right: auto; }
-    @media only screen and (max-width: 900px) {
+    @media only screen and (max-width: 1000px) {
       .footer__nav {
         margin-right: 0;
         margin-bottom: 6.5rem; } }
-    @media only screen and (max-width: 650px) {
+    @media only screen and (max-width: 550px) {
       .footer__nav {
         margin-bottom: 4.85rem; } }
   .footer__nav-menu {
@@ -152,7 +155,7 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center; }
-    @media only screen and (max-width: 650px) {
+    @media only screen and (max-width: 550px) {
       .footer__nav-menu {
         width: auto;
         flex-direction: column;
@@ -180,14 +183,17 @@ a {
   justify-content: space-between;
   align-items: center;
   padding: 4.35rem 0; }
-  @media only screen and (max-width: 1320px) {
+  @media only screen and (max-width: 1440px) {
     .header {
-      width: 93.75%;
+      width: 88.89%;
       max-width: none;
       padding: 4rem 0; } }
-  @media only screen and (max-width: 650px) {
+  @media only screen and (max-width: 768px) {
     .header {
-      width: 92%;
+      width: 89.58%; } }
+  @media only screen and (max-width: 550px) {
+    .header {
+      width: 87.2%;
       padding: 3.2rem 0; } }
   .header__nav-menu {
     list-style: none;
@@ -195,6 +201,9 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center; }
+    @media only screen and (max-width: 650px) {
+      .header__nav-menu {
+        width: 25.3rem; } }
     @media only screen and (max-width: 550px) {
       .header__nav-menu {
         display: none; } }
@@ -454,6 +463,16 @@ a {
 .main-home {
   width: 100%;
   max-width: 128rem; }
+  @media only screen and (max-width: 1440px) {
+    .main-home {
+      width: 88.89%;
+      max-width: none; } }
+  @media only screen and (max-width: 768px) {
+    .main-home {
+      width: 89.58%; } }
+  @media only screen and (max-width: 550px) {
+    .main-home {
+      width: 87.2%; } }
 
 .hero {
   height: 60rem;
