--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -6,30 +6,34 @@
   align-items: center;
   background-color: #2c343e;
 
-  @media only screen and (max-width: 1320px) {
-    width: 93.75%;
+  @media only screen and (max-width: 1440px) {
+    width: 88.89%;
     max-width: none;
   }
 
-  @media only screen and (max-width: 900px) {
+  @media only screen and (max-width: 1000px) {
     flex-direction: column;
     justify-content: center;
     padding: 5.4rem 0;
   }
 
-  @media only screen and (max-width: 650px) {
-    width: 92%;
+  @media only screen and (max-width: 768px) {
+    width: 89.58%;
+  }
+
+  @media only screen and (max-width: 550px) {
+    width: 87.2%;
   }
 
   &__logo {
     margin-right: 9.6%;
 
-    @media only screen and (max-width: 900px) {
+    @media only screen and (max-width: 1000px) {
       margin-right: 0;
       margin-bottom: 3.2rem;
     }
 
-    @media only screen and (max-width: 650px) {
+    @media only screen and (max-width: 550px) {
       height: 2.4rem;
       margin-bottom: 4.85rem;
     }
@@ -38,12 +42,12 @@
   &__nav {
     margin-right: auto;
 
-    @media only screen and (max-width: 900px) {
+    @media only screen and (max-width: 1000px) {
       margin-right: 0;
       margin-bottom: 6.5rem;
     }
 
-    @media only screen and (max-width: 650px) {
+    @media only screen and (max-width: 550px) {
       margin-bottom: 4.85rem;
     }
   }
@@ -55,7 +59,7 @@
     justify-content: space-between;
     align-items: center;
 
-    @media only screen and (max-width: 650px) {
+    @media only screen and (max-width: 550px) {
       width: auto;
       flex-direction: column;
       gap: 2.4rem;
