--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,6 +1,19 @@
 .main-home {
   width: 100%;
   max-width: 128rem;
+
+  @media only screen and (max-width: 1440px) {
+    width: 88.89%;
+    max-width: none;
+  }
+
+  @media only screen and (max-width: 768px) {
+    width: 89.58%;
+  }
+
+  @media only screen and (max-width: 550px) {
+    width: 87.2%;
+  }
 }
 
 .hero {
