--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,14 @@ a {
 .heading-xl {
   font-size: 7.2rem;
   line-height: 7.2rem; }
+  @media only screen and (max-width: 768px) {
+    .heading-xl {
+      font-size: 4.8rem;
+      line-height: 4.8rem; } }
+  @media only screen and (max-width: 550px) {
+    .heading-xl {
+      font-size: 4rem;
+      line-height: 4rem; } }
 
 .heading-lg {
   font-size: 4rem;
@@ -62,6 +70,10 @@ a {
   font-size: 1.6rem;
   line-height: 2.6rem;
   font-weight: 400; }
+  @media only screen and (max-width: 768px) {
+    .font-body {
+      font-size: 1.5rem;
+      line-height: 2.5rem; } }
 
 .font-nav {
   color: #83888f;
@@ -479,22 +491,52 @@ a {
   width: 100%;
   background: url("/assets/home/desktop/image-hero-coffeepress.jpg"), lightgray 0px 0px/100% 100% no-repeat;
   background-size: cover;
+  background-position: center;
   border-radius: 10px;
   padding-left: 6.72%;
   display: flex;
   align-items: center; }
+  @media only screen and (max-width: 1100px) {
+    .hero {
+      height: 50rem;
+      padding-left: 5.69%; } }
+  @media only screen and (max-width: 768px) {
+    .hero {
+      padding-left: 8.43%; } }
+  @media only screen and (max-width: 550px) {
+    .hero {
+      justify-content: center;
+      padding: 0 7.3%; } }
   .hero__text-container {
     display: flex;
     flex-direction: column;
     align-items: start; }
+    @media only screen and (max-width: 550px) {
+      .hero__text-container {
+        align-items: center; } }
   .hero__heading {
     color: #fefcf7;
     width: 49.3rem; }
+    @media only screen and (max-width: 768px) {
+      .hero__heading {
+        width: 32.9rem; } }
+    @media only screen and (max-width: 550px) {
+      .hero__heading {
+        width: 100%;
+        text-align: center; } }
   .hero__subheading {
     color: #fefcf7;
     opacity: 0.8;
     width: 44.5rem;
     margin: 3.2rem 0 5.6rem; }
+    @media only screen and (max-width: 768px) {
+      .hero__subheading {
+        width: 39.8rem;
+        margin: 2.4rem 0 4rem; } }
+    @media only screen and (max-width: 550px) {
+      .hero__subheading {
+        width: 100%;
+        text-align: center; } }
 
 .collection {
   padding: 10.4rem 0 19rem;
