--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -23,6 +23,16 @@
   @extend %heading;
   font-size: 7.2rem;
   line-height: 7.2rem;
+
+  @media only screen and (max-width: 768px) {
+    font-size: 4.8rem;
+    line-height: 4.8rem;
+  }
+
+  @media only screen and (max-width: 550px) {
+    font-size: 4rem;
+    line-height: 4rem;
+  }
 }
 
 .heading-lg {
@@ -49,6 +59,11 @@
   font-size: 1.6rem;
   line-height: 2.6rem;  
   font-weight: 400;
+
+  @media only screen and (max-width: 768px) {
+    font-size: 1.5rem;
+    line-height: 2.5rem;
+  }
 }
 
 .font-nav {
