--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -19,22 +19,51 @@
 .hero {
   height: 60rem;
   width: 100%;
-  background: url("/assets/home/desktop/image-hero-coffeepress.jpg"), lightgray 0px 0px / 100% 100% no-repeat;
+  background: url("/assets/home/desktop/image-hero-coffeepress.jpg"),
+    lightgray 0px 0px / 100% 100% no-repeat;
   background-size: cover;
+  background-position: center;
   border-radius: 10px;
   padding-left: 6.72%;
   display: flex;
   align-items: center;
 
+  @media only screen and (max-width: 1100px) {
+    height: 50rem;
+    padding-left: 5.69%;
+  }
+
+  @media only screen and (max-width: 768px) {
+    padding-left: 8.43%;
+  }
+
+  @media only screen and (max-width: 550px) {
+    justify-content: center;
+    padding: 0 7.3%;
+  }
+
   &__text-container {
     display: flex;
     flex-direction: column;
     align-items: start;
+
+    @media only screen and (max-width: 550px) {
+      align-items: center;
+    }
   }
 
   &__heading {
     color: $color-cream;
     width: 49.3rem;
+
+    @media only screen and (max-width: 768px) {
+      width: 32.9rem;
+    }
+
+    @media only screen and (max-width: 550px) {
+      width: 100%;
+      text-align: center;
+    }
   }
 
   &__subheading {
@@ -42,6 +71,16 @@
     opacity: 0.8;
     width: 44.5rem;
     margin: 3.2rem 0 5.6rem;
+
+    @media only screen and (max-width: 768px) {
+      width: 39.8rem;
+      margin: 2.4rem 0 4rem;
+    }
+
+    @media only screen and (max-width: 550px) {
+      width: 100%;
+      text-align: center;
+    }
   }
 }
 
