style: add styles for media queries <=768px & <=1200px for section.collection in index.html

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -17,6 +17,16 @@
   line-height: 7.2rem;
   text-transform: lowercase;
   letter-spacing: 13px;
+
+  @media only screen and (max-width: 1200px) {
+    font-size: 12rem;
+    letter-spacing: 12px;
+  }
+
+  @media only screen and (max-width: 1000px) {
+    font-size: 9.6rem;
+    letter-spacing: 6px;
+  }
 }
 
 .heading-xl {
