--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -90,6 +90,10 @@
   flex-direction: column;
   align-items: center;
 
+  @media only screen and (max-width: 768px) {
+    padding: 14.4rem 0 12.9rem;
+  }
+
   &__heading {
     position: relative;
     height: 19.6rem;
@@ -100,11 +104,20 @@
       $color-cream 100%
     );
 
+    @media only screen and (max-width: 1200px) {
+      width: 100%;
+      height: 11.8rem;
+    }
+
     & > h2 {
       position: absolute;
       top: 8.6rem;
       width: 100%;
       z-index: -1;
+
+      @media only screen and (max-width: 1200px) {
+        top: 2.7rem;
+      }
     }
   }
 
@@ -115,10 +128,28 @@
     justify-content: space-between;
     position: relative;
     top: -5.5rem;
+
+    @media only screen and (max-width: 1200px) {
+      width: 83.28%;
+      max-width: none;
+      top: -4.5rem;
+      flex-direction: column;
+      justify-content: start;
+      align-items: center;
+      gap: 3.2rem;
+    }
   }
 
   &__card {
     width: 22.97%;
+    
+    @media only screen and (max-width: 1200px) {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      gap: 3.5rem;
+    }
   }
 }
 
