--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -27,6 +27,15 @@
     font-size: 9.6rem;
     letter-spacing: 6px;
   }
+
+  @media only screen and (max-width: 750px) {
+    font-size: 7rem;
+    letter-spacing: 0;
+  }
+
+  @media only screen and (max-width: 550px) {
+    font-size: 4rem;
+  }
 }
 
 .heading-xl {
