--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -11,10 +11,18 @@
     @media only screen and (max-width: 1200px) {
       width: 37.2%;
     }
+
+    @media only screen and (max-width: 550px) {
+      width: 20rem;
+    }
   }
 
   &__heading {
     margin-bottom: 2.4rem;
+
+    @media only screen and (max-width: 550px) {
+      margin-bottom: 1.6rem;
+    }
   }
 
   &__heading,
@@ -23,6 +31,10 @@
 
     @media only screen and (max-width: 1200px) {
       text-align: start;
+    }
+
+    @media only screen and (max-width: 550px) {
+      text-align: center;
     }
   }
 
