--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -94,6 +94,10 @@
     padding: 14.4rem 0 12.9rem;
   }
 
+  @media only screen and (max-width: 550px) {
+    padding: 12rem 0;
+  }
+
   &__heading {
     position: relative;
     height: 19.6rem;
@@ -109,6 +113,11 @@
       height: 11.8rem;
     }
 
+    @media only screen and (max-width: 550px) {
+      width: 100%;
+      height: 7.2rem;
+    }
+
     & > h2 {
       position: absolute;
       top: 8.6rem;
@@ -117,6 +126,10 @@
 
       @media only screen and (max-width: 1200px) {
         top: 2.7rem;
+      }
+
+      @media only screen and (max-width: 550px) {
+        top: 0;
       }
     }
   }
@@ -138,6 +151,11 @@
       align-items: center;
       gap: 3.2rem;
     }
+
+    @media only screen and (max-width: 550px) {
+      top: 1.3rem;
+      gap: 4.8rem;
+    }
   }
 
   &__card {
@@ -149,6 +167,14 @@
       flex-direction: row;
       justify-content: center;
       gap: 3.5rem;
+    }
+
+    @media only screen and (max-width: 550px) {
+      max-width: 28.2rem;
+      flex-direction: column;
+      justify-content: start;
+      align-items: center;
+      gap: 2.4rem;
     }
   }
 }
