--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -58,6 +58,10 @@
   @extend %heading;
   font-size: 4rem;
   line-height: 4.8rem;
+
+  @media only screen and (max-width: 768px) {
+    font-size: 3.2rem;
+  }
 }
 
 .heading-md {
