--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -192,6 +192,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    @media only screen and (max-width: 1200px) {
+      padding: 7.1rem 10% 0;
+    }
   }
 
   &__heading,
@@ -205,12 +209,23 @@
     opacity: 0.8;
     width: 54rem;
     margin: 3.2rem 0 8.6rem;
+
+    @media only screen and (max-width: 1200px) {
+      margin: 2.4rem 0 7rem;
+    }
   }
 
   &__list {
     width: 100%;
     display: flex;
     justify-content: space-between;
+
+    @media only screen and (max-width: 1200px) {
+      flex-direction: column;
+      justify-content: start;
+      align-items: center;
+      gap: 2.4rem;
+    }
   }
 
   &__card {
@@ -219,10 +234,23 @@
     border-radius: 0.8rem;
     padding: 7.2rem 4.28% 4.8rem;
     background-color: $color-cyan-dark;
+
+    @media only screen and (max-width: 1200px) {
+      width: 57.3rem;
+      padding: 4.1rem 4.8rem !important;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      gap: 5.5rem;
+    }
   }
 
   &__card:nth-child(3) {
     padding-top: 8.3rem;
+
+    @media only screen and (max-width: 1200px) {
+      padding-top: 0;
+    }
   }
 
   &__img {
